# double-pendulum-analysis

./: README.md  double-pendulum-analysis.cabal  plot.plt
app/: Main.hs
